(#1293) Fixes broken css.

--- a/app/assets/stylesheets/asset_library_sidebar.css.less
+++ b/app/assets/stylesheets/asset_library_sidebar.css.less
@@ -241,7 +241,7 @@
 
       .thumb {
         position: relative;
-        margin-top: -17px;
+        margin-top: 12px;
         .thumb-definition;
         span {
           background-size: 100%;
@@ -263,7 +263,7 @@
         width: 17px;
         height: 17px;
         vertical-align: top;
-        margin: 3px 3px 0 1px;
+        margin: 19px -24px 0 1px;
         display: inline-block;
         opacity: 0.7;
         background-size: 100%;
